--- a/_includes/projects/slides/acs-aem-commons.html
+++ b/_includes/projects/slides/acs-aem-commons.html
@@ -8,7 +8,7 @@
                     <h1>ACS AEM Commons</h1>
                     <p class="lead">An ala carte selection of free AEM functionalities, components and development tools.</p>
                 </div>
-                <a href="/acs-aem-commons" class="action-btn">Explode ACS AEM Commons</a>
+                <a href="/acs-aem-commons" class="action-btn">Explore ACS AEM Commons</a>
             </div>
 
 
