--- a/_includes/shared/footer.html
+++ b/_includes/shared/footer.html
@@ -5,6 +5,8 @@
                 &copy; Adobe Systems Incorporated. All Rights Reserved
         </span>
 
-        <a href="/" class="float: right">ACS AEM Projects</a>
+        <span style="float:right;">
+        	[ <a href="/">ACS AEM Projects</a> ]
+        </span>
 	</div>
 </footer>
