--- a/_includes/tools/jumbotron.html
+++ b/_includes/tools/jumbotron.html
@@ -2,6 +2,7 @@
     <div class="unslider">
 
         <ul>
+            {% include tools/slides/intro.html %}        
             {% include tools/slides/aem-fiddle.html %}
             {% include tools/slides/query-editor.html %}
         </ul>
