--- a/_includes/tools/slides/intro.html
+++ b/_includes/tools/slides/intro.html
@@ -5,15 +5,15 @@
 
             <div class="secondary message">
                 <div class="text">
-                    <h1>ACS AEM Commons</h1>
-                    <p class="lead">The wheel works just fine.</p>
+                    <h1>ACS AEM Tools</h1>
+                    <p class="lead">Your job is hard enough.</p>
                 </div>
-                <a href="./#features" class="action-btn">Checkout the Features!</a>
+                <a href="#features" class="action-btn">Checkout the features!</a>
             </div>
 
 
             <div class="primary image">
-                <img class="img-responsive" src="/assets/commons/images/giant-package-icon.png"/>
+                <img class="img-responsive" src="/assets/tools/images/giant-package-icon.png"/>
             </div>            
         </div>
     </div>    
