--- a/lib/commons/commons.less
+++ b/lib/commons/commons.less
@@ -6,10 +6,10 @@
 
 @secondary-color: red;
 
-@dark-bg-color: #ffe400;
+@dark-bg-color: #f55115;
 @dark-bg-color-text: darken(@color, 10%);
-@dark-bg-color-light: #ffe400;
-@dark-bg-color-dark: #ff9c00;
+@dark-bg-color-light: #ff8781;
+@dark-bg-color-dark: #bc2606;
 
 a {
   color: @color;
@@ -19,3 +19,6 @@ a {
   }
 }
 
+.color-block {
+	background-color: #882021;
+}
