--- a/lib/projects/projects.less
+++ b/lib/projects/projects.less
@@ -8,7 +8,7 @@
 
 @dark-bg-color: @color-light;
 @dark-bg-color-text: white;
-@dark-bg-color-dark: darken(@dark-bg-color, 10%);
+@dark-bg-color-dark: darken(@dark-bg-color, 20%);
 @dark-bg-color-light: lighten(@dark-bg-color, 10%);
 
 a {
@@ -19,3 +19,6 @@ a {
   }
 }
 
+.color-block {
+	background-color: ##2A073B;
+}
