--- a/lib/shared/jumbotron.less
+++ b/lib/shared/jumbotron.less
@@ -86,15 +86,15 @@
       .btn();
       .btn-lg();
 
-      color: #eee;
+      color: #ddd;
 
-      &hover {
-        color: white;
+      &:hover {
+        color: #fff;
       }
 
       &:active {
         color: white;
-        background-color: darken(@dark-bg-color-light, 10%);
+        background-color: @dark-bg-color-dark;
       }
 
       font-weight: 200;
@@ -103,6 +103,5 @@
       background-color: transparent;
       background: transparent;
     }
-
   }
 }
