--- a/_layouts/acs-aem-tools_home.html
+++ b/_layouts/acs-aem-tools_home.html
@@ -14,6 +14,8 @@ layout: acs-aem-tools_base
         {% include acs-aem-tools/jumbotron.html %}
     </div>
 
+    {% include acs-aem-tools/news.html %}
+
     <div class="page content" role="main">
         {{ content }}
     </div>
