--- a/lib/shared/shared.less
+++ b/lib/shared/shared.less
@@ -92,12 +92,15 @@ header.top {
 }
 
 .news {
+  margin-top: 1.25em;
+  margin-bottom: .5em; 
+
   .news-entry {
     margin-bottom: .5em;
   }
 
   .date {
-
+    color: #999;
   }
 
   .title {
