--- a/_layouts/acs-aem-commons_home.html
+++ b/_layouts/acs-aem-commons_home.html
@@ -15,6 +15,8 @@ layout: acs-aem-commons_base
 
     </div>
 
+    {% include acs-aem-commons/news.html %}
+
     <div class="page content" role="main">
         {{ content }}        
     </div>
