--- a/_layouts/acs-aem-projects_home.html
+++ b/_layouts/acs-aem-projects_home.html
@@ -15,6 +15,8 @@ layout: acs-aem-projects_base
 
 	</div>
 
+	{% include acs-aem-projects/news.html %}
+
 	<div class="page content" role="main">
 	    {{ content }}
 	</div>
