Fixed Features links

--- a/_includes/acs-aem-tools/nav.html
+++ b/_includes/acs-aem-tools/nav.html
@@ -1,6 +1,6 @@
 <ul class="nav">
     <li><a href="/acs-aem-tools">ACS AEM Tools</a></li>
-    <li><a href="#features">Features</a></li>
+    <li><a href="/acs-aem-tools/#features">Features</a></li>
     <li><a href="https://github.com/Adobe-Consulting-Services/acs-aem-tools" target="_blank">GitHub Project</a></li>
     <li><a href="https://github.com/Adobe-Consulting-Services/acs-aem-tools/blob/master/CONTRIBUTING.md" target="_blank">Contribute</a></li>
     <li class="acs-aem-projects"><a href="/"></a>    
