Fixes to sliders

--- a/_includes/acs-aem-commons/jumbotron.html
+++ b/_includes/acs-aem-commons/jumbotron.html
@@ -3,6 +3,8 @@
 
         <ul>
             {% include acs-aem-commons/slides/intro.html %}
+            <!-- Slides -->
+            {% include acs-aem-commons/slides/acl-packager.html %}
         </ul>
 
     </div>
