--- a/_includes/acs-aem-commons/slides/intro.html
+++ b/_includes/acs-aem-commons/slides/intro.html
@@ -1,19 +1,17 @@
 <li class="slide">
 
     <div class="container">
-        <div class="wrapper">
-
-            <div class="secondary message">
+        <div class="wrapper image-on-top">
+            <img class="slide-image" src="/assets/acs-aem-commons/images/giant-package-icon.png"/>
+            
+            <div class="message">
                 <div class="text">
                     <h1>ACS AEM Commons</h1>
-                    <p class="lead">The wheel works just fine.</p>
+                    <p class="lead">An ala carte selection of free AEM functionalities, components and development tools.</p>
                 </div>
-                <a href="./#features" class="action-btn">Checkout the Features!</a>
+                <a href="/acs-aem-commons/#features" class="action-btn">Checkout the Features!</a>
             </div>
-
-            <div class="primary image">
-                <img class="img-responsive" src="/assets/acs-aem-commons/images/giant-package-icon.png"/>
-            </div>            
+         
         </div>
     </div>    
 
