--- a/_includes/acs-aem-projects/slides/acs-aem-tools.html
+++ b/_includes/acs-aem-projects/slides/acs-aem-tools.html
@@ -1,13 +1,10 @@
 <li class="slide">
 
     <div class="container">
-        <div class="wrapper">
+        <div class="wrapper image-on-right">
+            <img class="slide-image" src="/assets/acs-aem-tools/images/giant-package-icon.png"/>
 
-            <div class="primary image">
-                <img class="img-responsive" src="/assets/acs-aem-tools/images/giant-package-icon.png"/>
-            </div>    
-
-            <div class="secondary message">
+            <div class="message">
                 <div class="text">
                     <h1>ACS AEM Tools</h1>
                     <p class="lead">A suite of open source AEM tools aimed at making developer lives easier!</p>
