--- a/_includes/acs-aem-tools/slides/query-editor.html
+++ b/_includes/acs-aem-tools/slides/query-editor.html
@@ -1,20 +1,17 @@
 <li class="slide">
 
     <div class="container">
-        <div class="wrapper">
-
-            <div class="secondary message">
+        <div class="wrapper image-on-right">
+            <img class="slide-image" src="/assets/acs-aem-tools/images/slides/query-editor.png"/>
+            
+            <div class="message">
                 <div class="text">
                     <h1>Query Editor</h1>
                     <p class="lead">Build and debug QueryBuilder queries in real time</p>
                 </div>
                 <a href="/acs-aem-tools/features/query-editor.html" class="action-btn">Learn about Query Editor</a>
             </div>
-
-
-            <div class="primary image">
-                <img class="img-responsive" src="/assets/acs-aem-tools/images/slides/query-editor.png"/>
-            </div>            
+         
         </div>
     </div>    
 
