--- a/_includes/shared/head.html
+++ b/_includes/shared/head.html
@@ -10,5 +10,5 @@
 
     <link rel="stylesheet" href="/assets/shared/fonts/source-sans/stylesheet.css">
     <link rel="stylesheet" href="/assets/{{ include.project }}/css/styles.css">
-    <link rel="shortcut icon" href="/assets/{{ include.project }}/favicon.ico">
+    <link rel="shortcut icon" href="/assets/{{ include.project }}/images/favicon.ico">
 </head>
