--- a/lib/acs-aem-commons/commons.less
+++ b/lib/acs-aem-commons/commons.less
@@ -1,6 +1,6 @@
 @import "../shared/shared.less";
 
-@color: #cb0900;
+@color: #333; /*#cb0900; */
 @color-dark: darken(@color, 25%);
 @color-light: lighten(@color, 25%);
 
