--- a/lib/acs-aem-projects/projects.less
+++ b/lib/acs-aem-projects/projects.less
@@ -1,5 +1,7 @@
 @import "../shared/shared.less";
 
+@import "icons.less";
+
 @color: #1e002e;
 @color-dark: darken(@color, 25%);
 @color-light: lighten(@color, 25%);
