--- a/lib/shared/core.less
+++ b/lib/shared/core.less
@@ -2,6 +2,7 @@
 @import "../vendor/prettify.less";
 @import "../vendor/syntax.less";
 @import "../vendor/unslider.less";
+@import "mixins.less";
 
 body {
   background: #fff;
@@ -27,7 +28,6 @@ h4 {
   font-size: 1em;
 }
 
-
 .code {
   background-color: #f7f7f7;
   border-radius: 0;
@@ -38,15 +38,6 @@ h4 {
   font-family: Courier, serif;
 }
 
-.rounded-corners(@radius) {
-  -moz-border-radius: @radius;
-  -webkit-border-radius: @radius;
-  border-radius: @radius;
-  -khtml-border-radius: @radius;
-}
-
-
-.shadow() {
-  -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
+p a {
+  text-decoration: underline;
 }
