--- a/_includes/acs-aem-projects/slides/acs-aem-commons.html
+++ b/_includes/acs-aem-projects/slides/acs-aem-commons.html
@@ -1,21 +1,17 @@
 <li class="slide">
 
     <div class="container">
-        <div class="wrapper">
+        <div class="wrapper image-on-left">
+            <img class="slide-image" src="/assets/acs-aem-commons/images/giant-package-icon.png"/>
 
-            <div class="secondary message">
+            <div class="message">
                 <div class="text">
                     <h1>ACS AEM Commons</h1>
                     <p class="lead">An ala carte selection of free AEM functionalities, components and development tools.</p>
                 </div>
-                <a href="/acs-aem-commons" class="action-btn">Explore ACS AEM Commons</a>
+                <a href="/acs-aem-commons" class="action-btn">Learn about ACS AEM Commons</a>
             </div>
 
-
-            <div class="primary image">
-                <img class="img-responsive" src="/assets/acs-aem-commons/images/giant-package-icon.png"/>
-            </div>            
         </div>
     </div>    
-
 </li>
