--- a/_includes/acs-aem-projects/slides/intro.html
+++ b/_includes/acs-aem-projects/slides/intro.html
@@ -1,9 +1,8 @@
 <li class="slide">
 
     <div class="container">
-        <div class="stacked">
-
-            <img class="img-responsive" src="/assets/acs-aem-projects/slides/intro/package-icons.png"/>
+        <div class="wrapper image-on-top">
+            <img class="slide-image" src="/assets/acs-aem-projects/slides/intro/package-icons.png"/>
             
             <div class="message">
                 <div class="text">
