--- a/_includes/acs-aem-tools/slides/aem-fiddle.html
+++ b/_includes/acs-aem-tools/slides/aem-fiddle.html
@@ -1,20 +1,17 @@
 <li class="slide">
 
     <div class="container">
-        <div class="wrapper">
-
-            <div class="primary image">
-                <img class="img-responsive" src="/assets/acs-aem-tools/images/slides/aem-fiddle.png"/>
-            </div>
-
-            <div class="secondary message">
+        <div class="wrapper image-on-bottom">
+            <img class="slide-image" src="/assets/acs-aem-tools/images/slides/aem-fiddle.png"/>
+            
+            <div class="message">
                 <div class="text">
                     <h1>AEM Fiddle</h1>
                     <p class="lead">Web IDE perfect for POC’s, experimenting and running ad hoc scripts</p>
                 </div>
-                <a href="#features" class="action-btn">Learn about AEM Fiddle</a>
+                <a href="/acs-aem-tools/features/aem-fiddle.html" class="action-btn">Learn about AEM Fiddle</a>
             </div>
-            
+         
         </div>
     </div>    
 
