--- a/_includes/acs-aem-tools/slides/intro.html
+++ b/_includes/acs-aem-tools/slides/intro.html
@@ -1,20 +1,17 @@
 <li class="slide">
 
     <div class="container">
-        <div class="wrapper">
-
-            <div class="secondary message">
+        <div class="wrapper image-on-left">
+            <img class="slide-image" src="/assets/acs-aem-tools/images/giant-package-icon.png"/>
+            
+            <div class="message">
                 <div class="text">
                     <h1>ACS AEM Tools</h1>
                     <p class="lead">Your job is hard enough.</p>
                 </div>
-                <a href="#features" class="action-btn">Checkout the features!</a>
+                <a href="/acs-aem-tools/#features" class="action-btn">Checkout the Features!</a>
             </div>
-
-
-            <div class="primary image">
-                <img class="img-responsive" src="/assets/acs-aem-tools/images/giant-package-icon.png"/>
-            </div>            
+         
         </div>
     </div>    
 
