--- a/_layouts/acs-aem-commons_default.html
+++ b/_layouts/acs-aem-commons_default.html
@@ -12,5 +12,7 @@ layout: acs-aem-commons_base
 </div>
 
 <div class="page content" role="main">
-    {{ content }}
+	<div class="container">
+    	{{ content }}
+	</div>
 </div>
