--- a/_layouts/acs-aem-projects_default.html
+++ b/_layouts/acs-aem-projects_default.html
@@ -9,8 +9,8 @@ layout: acs-aem-projects_base
     </div>
 </header>
 
-<div class="page" role="main">
-	<div class="content container">
+<div class="content page" role="main">
+	<div class="container">
 		{{ content }}
 	</div>
 </div>
