--- a/_layouts/acs-aem-tools_default.html
+++ b/_layouts/acs-aem-tools_default.html
@@ -12,8 +12,8 @@ layout: acs-aem-tools_base
     </header>
 </div>
 
-<div class="page" role="main">
-	<div class="content container">
+<div class="content page" role="main">
+	<div class="container">
 		{{ content }}
 	</div>
 </div>
