--- a/lib/shared/feature-docs.less
+++ b/lib/shared/feature-docs.less
@@ -42,12 +42,12 @@
   }
 
   .img-wrapper {
-    margin: 0 auto;
+    margin: 1em auto;
     max-width: 900px;
   }
 
   img {
-    display: block;
+    display: inline-block;
     max-width: 100%;
   }
 
@@ -68,6 +68,11 @@
   code {
     whitespace: normal;
   }
+
+  .img-wrapper {
+    margin: .5em auto;
+  }
+
 }
 
 /* Inline Code */
