--- a/_includes/shared/footer-libs.html
+++ b/_includes/shared/footer-libs.html
@@ -2,4 +2,5 @@
 <script src="/assets/shared/js/vendor/prettify.js"></script>
 <script src="/assets/shared/js/vendor/bootstrap.min.js"></script>
 <script src="/assets/shared/js/vendor/unslider.min.js"></script>
+<script src="/assets/shared/js/vendor/bigfoot.min.js"></script>
 <script src="/assets/shared/js/app.js"></script>
