--- a/lib/shared/jumbotron.less
+++ b/lib/shared/jumbotron.less
@@ -232,10 +232,10 @@
       .btn();
       .btn-lg();
 
-      color: #eee;
+      color: white;
 
       &:hover {
-        color: #fff;
+        color: white;
       }
 
       &:active {
