--- a/assets/acs-aem-projects/css/styles.css
+++ b/assets/acs-aem-projects/css/styles.css
@@ -6971,7 +6971,7 @@ p a {
   font-size: 18px;
   line-height: 1.33;
   border-radius: 6px;
-  color: #eee;
+  color: white;
   font-weight: 200;
   border-color: #9200e1;
   background-color: transparent;
@@ -7007,7 +7007,7 @@ fieldset[disabled] #jumbotron .slide .action-btn {
   box-shadow: none;
 }
 #jumbotron .slide .action-btn:hover {
-  color: #fff;
+  color: white;
 }
 #jumbotron .slide .action-btn:active {
   color: white;
