ACS AEM Commons - ACL Packager slide

--- a/_includes/acs-aem-commons/slides/acl-packager.html
+++ b/_includes/acs-aem-commons/slides/acl-packager.html
@@ -1,7 +1,7 @@
 <li class="slide">
 
     <div class="container">
-        <div class="wrapper image-on-right">
+        <div class="wrapper image-on-bottom">
             <img class="slide-image" src="/assets/acs-aem-commons/images/slides/acl-packager.png"/>
             
             <div class="message">
@@ -9,7 +9,7 @@
                     <h1>ACL Packager</h1>
                     <p class="lead">Generate packages of ACLs for specific User or Groups</p>
                 </div>
-                <a href="/acs-aem-commons/#features" class="action-btn">Learn more about ACL Packager</a>
+                <a href="/acs-aem-commons/features/acl-packager.html" class="action-btn">Learn more about ACL Packager</a>
             </div>
          
         </div>
