--- a/lib/shared/feature-docs.less
+++ b/lib/shared/feature-docs.less
@@ -42,8 +42,9 @@
   }
 
   .img-wrapper {
-    margin: 1em auto;
+    margin: 2em auto;
     max-width: 900px;
+    text-align: center;
   }
 
   img {
@@ -68,11 +69,6 @@
   code {
     whitespace: normal;
   }
-
-  .img-wrapper {
-    margin: .5em auto;
-  }
-
 }
 
 /* Inline Code */
