Slides - UI adjustments

--- a/_includes/acs-aem-commons/slides/acl-packager.html
+++ b/_includes/acs-aem-commons/slides/acl-packager.html
@@ -7,7 +7,7 @@
             <div class="message">
                 <div class="text">
                     <h1>ACL Packager</h1>
-                    <p class="lead">Generate packages of ACLs for specific User or Groups</p>
+                    <p class="lead">Genereate packages of ACLs for specific User or Groups.</p>
                 </div>
                 <a href="/acs-aem-commons/features/acl-packager.html" class="action-btn">Learn more about ACL Packager</a>
             </div>
