--- a/lib/shared/jumbotron.less
+++ b/lib/shared/jumbotron.less
@@ -132,7 +132,7 @@
         .slide-image {
           top: 1em;
           margin: initial;
-          width: 525px;
+          width: auto;
           height: auto;
         }
 
