--- a/_includes/acs-aem-commons/slides/intro.html
+++ b/_includes/acs-aem-commons/slides/intro.html
@@ -7,9 +7,9 @@
             <div class="message">
                 <div class="text">
                     <h1>ACS AEM Commons</h1>
-                    <p class="lead">An ala carte selection of free AEM functionalities, components and development tools.</p>
+                    <p class="lead">The wheel doesn't need reinventing</p>
                 </div>
-                <a href="/acs-aem-commons/#features" class="action-btn">Checkout the Features!</a>
+                <a href="/acs-aem-commons/#features" class="action-btn">Checkout the Features</a>
             </div>
          
         </div>
