--- a/_includes/acs-aem-tools/slides/aem-fiddle.html
+++ b/_includes/acs-aem-tools/slides/aem-fiddle.html
@@ -7,7 +7,7 @@
             <div class="message">
                 <div class="text">
                     <h1>AEM Fiddle</h1>
-                    <p class="lead">Web IDE perfect for POC’s, experimenting and running ad hoc scripts</p>
+                    <p class="lead">A web IDE perfect for POC’s, experimenting and running ad hoc scripts</p>
                 </div>
                 <a href="/acs-aem-tools/features/aem-fiddle.html" class="action-btn">Learn about AEM Fiddle</a>
             </div>
