--- a/_includes/acs-aem-tools/slides/intro.html
+++ b/_includes/acs-aem-tools/slides/intro.html
@@ -7,9 +7,9 @@
             <div class="message">
                 <div class="text">
                     <h1>ACS AEM Tools</h1>
-                    <p class="lead">Your job is hard enough.</p>
+                    <p class="lead">Your job is hard enough</p>
                 </div>
-                <a href="/acs-aem-tools/#features" class="action-btn">Checkout the Features!</a>
+                <a href="/acs-aem-tools/#features" class="action-btn">Checkout the Tools</a>
             </div>
          
         </div>
