--- a/_includes/shared/footer.html
+++ b/_includes/shared/footer.html
@@ -6,7 +6,7 @@
         </span>
 
         <span style="float:right;">
-        	[ <a href="/">ACS AEM Projects</a> ]
+        	<a href="/">ACS AEM Projects</a>
         </span>
 	</div>
 </footer>
