--- a/lib/shared/feature-docs.less
+++ b/lib/shared/feature-docs.less
@@ -22,7 +22,7 @@
     }
 
     .updated {
-      background-color: red;
+      background-color: #308BF6;
       .badge
     }
 
@@ -68,6 +68,14 @@
 
   code {
     whitespace: normal;
+  }
+
+  .feature-doc-header {
+    margin-bottom: 1.5em;
+  }
+  
+  .available-since {
+
   }
 }
 
