--- a/_includes/shared/head.html
+++ b/_includes/shared/head.html
@@ -1,4 +1,21 @@
 <head>
+	<!--
+              ::                                                ::
+              ..                                              ::;:
+        ... ..::.osS$S&ss.         .,/s#`#Ss,.        ./mS$$$Sms;::: ::::
+    ::  ::: :;x#S$&'~`&S$$&.     .%$$S`    "%$$%    ,C$$$!~~"SS$$S;
+            .a$$%       `$$$S   ;$$$S       !SSS;::;$$$&:      ""'
+            l$$$!        l$$$l {$$$$                C&&$$$mmms...
+            $$$$         ;$$ssss$$$%                 ``~"&SSSS$$$SSs
+            S$$$          #$$$  $$$%         ::sss:::          `$$$$S
+            :S$$S      ++;%$$$:;S#$##::    :::S$$???S$$s        K$SS;::: :
+       ;:: ::"S$$s,.. ,s$"$$$$? #$$$$s       $$$$! ::;SSSs.. .s$$$S;:
+              ::"PSS$S!"' :$$?~~  `S$$$s. ssS$!'     ::`"PS$$$S"'' ::
+  !+++ +++++++++        +++    ++++   ``"^"'    ++!+++  +       ++    +++++++!
+
+                            ::  ACS  ......   2014 ::
+	-->
+
     <base href="{{ site.baseurl }}" />
 
     <meta charset="utf-8">
