--- a/_includes/acs-aem-tools/news.html
+++ b/_includes/acs-aem-tools/news.html
@@ -10,7 +10,7 @@
             </li>
             {% endfor %}
 
-            <a class="show-more" href="javascript:void();">Show more news &#xffec;</a>
+            <a class="show-more" href="javascript:void();">Show more news &#x2193;</a>
         </ul>
     </div>
 </section>
