Touch support for unsolder

--- a/_includes/shared/footer-libs.html
+++ b/_includes/shared/footer-libs.html
@@ -3,4 +3,5 @@
 <script src="/assets/shared/js/vendor/bootstrap.min.js"></script>
 <script src="/assets/shared/js/vendor/unslider.min.js"></script>
 <script src="/assets/shared/js/vendor/bigfoot.min.js"></script>
+<script src="/assets/shared/js/vendor/jquery.event.swipe.js"></script>
 <script src="/assets/shared/js/app.js"></script>
