--- a/_includes/shared/footer-libs.html
+++ b/_includes/shared/footer-libs.html
@@ -1,4 +1,5 @@
 <script src="/assets/shared/js/vendor/jquery.js"></script>
+<script src="/assets/shared/js/vendor/jquery.event.move.js"></script>
 <script src="/assets/shared/js/vendor/jquery.event.swipe.js"></script>
 <script src="/assets/shared/js/vendor/prettify.js"></script>
 <script src="/assets/shared/js/vendor/bootstrap.min.js"></script>
