Changed button on intro slide to a download link

--- a/_includes/acs-aem-tools/slides/intro.html
+++ b/_includes/acs-aem-tools/slides/intro.html
@@ -9,7 +9,8 @@
                     <h1>ACS AEM Tools</h1>
                     <p class="lead">Your job is hard enough</p>
                 </div>
-                <a href="/acs-aem-tools/#features" class="action-btn">Checkout the Tools</a>
+                
+                <a href="https://github.com/Adobe-Consulting-Services/acs-aem-tools/releases/download/ACS/acs-aem-tools-content-{{ site.data.acs-aem-tools.version }}.zip" class="action-btn">Download the latest release</a>
             </div>
          
         </div>
